--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <nav>
     <ul class="navbar">
-        <li><a href="/index.md">Home</a></li>
+        <li><a href="/">Home</a></li>
         <li><a href="/portfolio.html">Portfolio</a></li>
         <li><a href="/contact.html">Contact</a></li>
     </ul>
